refactor: UserMapper mapRoles